--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/luqmanabyadh/good-reads#readme",
   "dependencies": {
+    "chart.js": "^2.9.3",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "pg": "^8.2.1",
